concurrency works, uploads are consistently failing with the exception of docxs and pdfs very very rarely